--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #b5b5b5;
+  background-color: #cccccc;
   color: #333333;
 }
 .masonry-wrapper {
@@ -9,19 +9,21 @@ body {
   margin-left: auto;
 }
 .masonry {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(100px,1fr));
-  grid-gap: 10px;
-  grid-auto-rows: 0;
+  columns: 1;
+  column-gap: 10px;
 }
-@media only screen and (max-width: 1600px) and (min-width: 768px) {
-  .masonry {
-    grid-template-columns: repeat(2, minmax(100px,1fr));
+.masonry-item {
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 10px;
+}
+@media only screen and (max-width: 1023px) and (min-width: 768px) {  .masonry {
+    columns: 2;
   }
 }
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 1024px) {
   .masonry {
-    grid-template-columns: repeat(2, minmax(100px,1fr));
+    columns: 2;
   }
 }
 .masonry-item, .masonry-content {
@@ -34,26 +36,6 @@ body {
 }
 .masonry-item:hover {
   filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, .3));
-}
-.masonry-content {
-  overflow: hidden;
-}
-.masonry-item {
-  color: #111111;
-  background-color: #fafafa;
-}
-.masonry-title, .masonry-description {
-  margin: 0;
-}
-.masonry-title {
-  font-weight: 700;
-  font-size: 1.1rem;
-  padding: 1rem 1.5rem;
-}
-.masonry-description {
-  padding: 1.5rem;
-  font-size: .75rem;
-  border-top: 1px solid rgba(0, 0, 0, .05);
 }
 .masonry-footer {
   font-size: .75em;
