--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,54 +1,26 @@
-body {
-  background-color: #cccccc;
-  color: #333333;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat (3, auto-fit, minmax(600px, 1fr));
+ 
+  background-color: #000000;
+  padding: 10px;
 }
-.masonry-wrapper {
-  padding: 1.5em;
-  max-width: 960px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.masonry {
-  columns: 1;
-  column-gap: 10px;
-}
-.masonry-item {
-  display: inline-block;
-  vertical-align: top;
-  margin-bottom: 10px;
-}
-@media only screen and (max-width: 1023px) and (min-width: 768px) {  .masonry {
-    columns: 2;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .masonry {
-    columns: 2;
-  }
-}
-.masonry-item, .masonry-content {
-  border-radius: 4px;
-  overflow: hidden;
-}
-.masonry-item {
-  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));
-  transition: filter .25s ease-in-out;
-}
-.masonry-item:hover {
-  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, .3));
-}
-.masonry-footer {
-  font-size: .75em;
-  opacity: .25;
+.grid-item {
+  background-color: #CCCCCC;
+  border: 1px solid #000000;
+  padding: 20px;
+  font-size: 30px;
   text-align: center;
-  padding-top: 3em; 
-  padding-bottom: 3em;
-  margin-bottom: -1.5em;
-  transition: opacity 1s ease-in-out;
 }
-.masonry-footer a {
-  color: currentColor;
+.grid-item1 {
+  background-color: #CCCCCC;
+  border: 1px solid #000000;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  grid-column-start: 2;
+  grid-column-end: 4;
 }
-.masonry-footer:hover, .masonry-footer:active, .masonry-footer:focus {
-  opacity: .75;
-}
+body {
+	background-color: #A1A1A1
+}	
